@@ -1,0 +1,9 @@
+
+Relocation section '.rela.text' at offset 0x4010150 contains 6 entries:
+ Offset     Info    Type            Sym.Value  Sym. Name \+ Addend
+00080012  00000106 R_PPC_ADDR16_HA   00080000   .text \+ 4000020
+00080016  00000104 R_PPC_ADDR16_LO   00080000   .text \+ 4000020
+00080006  00000106 R_PPC_ADDR16_HA   00080000   .text \+ 4000020
+0008000a  00000104 R_PPC_ADDR16_LO   00080000   .text \+ 4000020
+0408002a  00000306 R_PPC_ADDR16_HA   00080000   _start \+ 0
+0408002e  00000304 R_PPC_ADDR16_LO   00080000   _start \+ 0
