@@ -1,3 +1,10 @@
+2009-01-26  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* ld-powerpc/powerpc.exp: Add vxworks relax testcase.
+	* ld-powerpc/vxworks-relax.s, ld-powerpc/vxworks-relax.rd: New.
+	* ld-powerpc/vxworks1.ld: Add .pad and .far input sections.
+	* ld-powerpc/vxworks1.rd: Correct regexp for undefined symbols.
+
 2009-01-26  Andrew Stubbs  <ams@codesourcery.com>
 
 	* ld-arm/attr-merge-3.attr: Update following gas change.
